Fixed side spacing

--- a/LuckyLucky/styles.css
+++ b/LuckyLucky/styles.css
@@ -23,9 +23,9 @@ body {
     background-color: #24222C;
     display: flex;
     justify-content: space-between;
-    padding: 3vw;
+    padding: 3vw 6vw;
     align-items: center;
-    width: calc(100% - 6vw);
+    width: calc(100% - 12vw);
     height: 12vw;
 }
 
@@ -49,7 +49,7 @@ body {
     width: 100%;
 }
 .steps {
-    padding: 0 4vw;
+    padding: 0 6vw;
 }
 .stepsTitle {
     display: flex;
@@ -101,7 +101,7 @@ span {
     font-weight: bold;
 }
 .agentsBenefit {
-    padding: 0 4vw;
+    padding: 0 6vw;
 }
 .agentsBenefitTitle {
     display: flex;
@@ -138,7 +138,7 @@ span {
 }
 .agentsBenefit2 {
     background-color: #002B4F;
-    padding: 0 4vw;
+    padding: 0 6vw;
     padding-top: 5vw;
     padding-bottom: 2vw;
     
@@ -155,7 +155,7 @@ span {
     margin-bottom: 5vw;
 }
 .commission {
-    padding: 4vw 4vw;
+    padding: 4vw 6vw;
 }
 .commissionTitle {
     display: flex;
@@ -225,7 +225,7 @@ span {
 }
 
 .contact {
-    padding: 4vw;
+    padding: 4vw 6vw;
     background-image: url('images/位图@3x.png');
     background-size: cover;
 }
